# juanfer-dev

./: .gitignore  docker-compose.yml  main.py
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1862ff089733_init_juanferdb_v1.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  historial_responsable.py  historial_responsable_cliente.py
backend/app/models/auditoria/: auditoria.py
backend/app/models/catalogos/: aseguradora.py  banco.py  categoria_mensaje.py  estado_cambio_intermediario.py  estado_cotizacion.py  estado_poliza.py  estado_prospecto.py  estado_tramite_banco.py  nivel_alerta.py  producto.py  ramo.py  tipo_documento.py
backend/app/models/dashboard_alertas/: config_alerta.py
backend/app/models/historial/: historial_responsable.py
backend/app/models/modulos_negocio/: cotizacion.py  nota_prospecto.py  poliza.py  prospecto.py
backend/app/models/operaciones/: cambio_intermediario.py  cancelacion.py  endoso_banco.py
backend/app/models/plantillas_conocimiento/: link_proceso.py  plantilla_mensaje.py
backend/app/routers/: auth.py  catalogo.py  cliente.py  dashboard.py  poliza.py  usuario.py
backend/app/schemas/: auth.py  catalogo.py  cliente.py  dashboard.py  poliza.py  traspaso.py  usuario.py
backend/app/services/: auth.py  catalogo.py  cliente.py  historial_responsable.py  poliza.py  usuario.py
backend/app/utils/: parse_file.py
backend/scripts/: seed_data.py
frontend/: .dockerignore  (+2 more)
(+37 files in other folders)
